[package]
name = "fastsearch"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastsearch"
path = "src/lib.rs"

[[bin]]
name = "fastsearch"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
rayon = "1.10"
crossbeam-channel = "0.5"
fuzzy-matcher = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
lz4_flex = "0.11"
ctrlc = "3.5"
memmap2 = "0.9"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true